# tool_library

./: Dockerfile  README.md  deployment.yaml  https_ingress.yaml  pyproject.toml  tool_library_deployment.yaml  tool_library_deployment_no_auth_copy.yaml
certs/: ca_bundle.crt  certificate.crt  private.key
custom-gpts/: utils.py
notebooks/: Usage.ipynb  openai.ipynb
tool_library/: api.py  client.py  events.py  factory.py  library.py  models.py  tools.py  utils.py
tool_library/example_tools/chat_ui/: .gitignore  _chainlit.md  auth.py  chat_ui.py  chat_utils.py  deployment.yaml  dev-launch.sh  dummy_server.py  full_deployment.yaml  notebook.ipynb  platform_utils.py  prepare.sh  pyproject.toml  requirements.txt  user_status.py
tool_library/example_tools/chat_ui/.chainlit/: config.toml
tool_library/example_tools/chat_ui/.chainlit/translations/: es-ES.json
tool_library/example_tools/chat_ui/public/: test.py
tool_library/example_tools/chat_ui/static/: pub.1000029151.jsonl
tool_library/example_tools/kalavai/: deployment.yaml  tool_example.py
tool_library/example_tools/knowledge_base/: .gitignore  api.py  deployment.yaml  dev-launch.sh  models.py  requirements.txt  utils.py
tool_library/example_tools/rag/: api.py  client.py  deployment.yaml  requirements.txt
