[tool.poetry]
name        = "tool_library"
version     = "0.1.0"
description = "Smart Library of Functions"
authors     = ["Adam Tomkins <artomkins@googlemail.com>"]


[tool.poetry.dependencies]
python                  = ">= 3.8, < 4.0" 
fastapi                 = { version = "0.101.1", extras = ["all"] }
pyyaml                  = { version = "6.0.1" }

# interface
prance                  = { version = "23.6.21.0" }
openapi-spec-validator  = { version = "0.7.1" }
ray                     = { version = "2.8.0"}
sentence_transformers   = { version = "2.2.2"}
black                   = { version = ">= 22.1.0", optional = true }


[tool.poetry.extras]

dev = [
    "black"
]



[tool.poetry.dev-dependencies]
click = "*"
pre-commit = "*"
black = "*"
xenon = "*"
mypy = "*"
pydocstyle = "*"


[build-system]
requires        = [
    "poetry-core>=1.0.0",
    "setuptools"  # for pip install -e
]
build-backend   = "poetry.core.masonry.api"
